--- a/manifest.template.json
+++ b/manifest.template.json
@@ -5,7 +5,7 @@
     "license": "Apache 2.0",
     "author":  "MaestroDev",
     "version": "updated at build time",
-    "class":   "MaestroDev::HttpUtils::HttpPingWorker",
+    "class":   "MaestroDev::HttpUtilsPlugin::HttpPingWorker",
     "type":    "ruby",
     "dependencies":[
     ],
